--- a/stylesheets/reader.css
+++ b/stylesheets/reader.css
@@ -289,7 +289,7 @@ object {
 .title {
     font-style: normal;
     font-weight: 400;
-    font-size: 3.2rem;
+    font-size: 2.4rem;
     text-align: center;
     margin-top: 4rem;
     margin-bottom: 1rem;
@@ -299,7 +299,7 @@ object {
 .subtitle {
     font-style: normal;
     font-weight: 400;
-    font-size: 2.4rem;
+    font-size: 2.2rem;
     text-align: center;
     margin-top: 2rem;
     margin-bottom: 1rem;
@@ -483,7 +483,7 @@ h1 > .tag, h2 > .tag, h3 > .tag {
     width: 100%;
     background: transparent;
     border-bottom: dashed 1px rgba(100, 100, 100, 0.2);
-    margin-bottom: 1.5rem;
+    margin-bottom: 1rem;
     position: relative;
 }
 
@@ -567,7 +567,7 @@ h1, h2, h3, h4, h5, h6 {
     }
 
     .page-break, .pagebreak {
-        display: none;
+        visibility: hidden;
     }
 
 }
